eyedbdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eyedb
  labels:
    app: eyedb
spec:
  selector:
    matchLabels:
      app: eyedb
  replicas: 1
  template:
    metadata:
      labels:
        app: eyedb
    spec:
      containers:
        - name: eyedb
          image: mongo
          volumeMounts:
            - mountPath: /var/lib/mongodb
              name: eye-db-data
          ports:
            - containerPort: 27017
              name: eyedb-port
      nodeSelector:
        zone: us-east-2a  # to indicate which zone we want our pods to run, should be same with the zone our volume is.
      volumes:
        - name: eye-db-data
          awsElasticBlockStore:
            volumeID: vol-01b164858b91f60d3
            fsType: ext4
