eyedep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eyeapp
  labels:
    app: eyeapp
spec:
  selector:
    matchLabels:
      app: eyeapp
  replicas: 1
  template:
    metadata:
      labels:
        app: eyeapp
    spec:
      containers:
        - name: eyeapp
          image: 154114/eyefront
          ports:
            - containerPort: 3000
              name: eyeapp-port
