eyeserverdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eyeserver-app
  labels:
    app: eyeserver-app
spec:
  selector:
    matchLabels:
      app: eyeserver-app
  replicas: 1
  template:
    metadata:
      labels:
        app: eyeserver-app
    spec:
      containers:
        - name: eyeserver-app
          image: 154114/server
          ports:
            - containerPort: 5000
              name: eyeserver-port
